--- a/templates/cards.html
+++ b/templates/cards.html
@@ -3,7 +3,7 @@
 {% block title %} Cards {% endblock %}
 
 {% block body %}
-	<div id="container"></div>
+	<div id="container">Hello</div>
 {% endblock %}
 
 {% block js %}
